--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3493,6 +3493,15 @@ input, select, textarea {
 					margin-left: 0;
 					padding: 0;
 				}
+/* siaconnect-access-section */
+.siaconnect-access-section {
+  background-image: url('assets/images/siaconnect_demo_background_dark.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 80px 0; /* adjust as needed */
+  color: white; /* if text overlays it */
+}
 
 /* XLarge */
 
