--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3069,7 +3069,7 @@ input, select, textarea {
 		background-color: #000000;
 		color: rgba(0, 0, 0, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2b.png"), url("assets/css/images/sia_header_background_circuit_grid_bright.svg"), linear-gradient(45deg, #101010 5%, #000000 30%, #202020);
+		background-image: url("assets/css/images/sia_header_background_circuit_grid_bright.svg"), linear-gradient(45deg, #101010 5%, #000000 30%, #202020);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		overflow: hidden;
