--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3496,11 +3496,11 @@ input, select, textarea {
 /* siaconnect-access-section */
 .siaconnect-access-section {
   background-image: url('images/siaconnect_demo_background_dark.png');
-  background-size: cover;
+  background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
   padding: 80px 0;
-  color: white;
+  color: #ffffff;
   text-align: center;
 }
 
