--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3066,7 +3066,7 @@ input, select, textarea {
 
 	#header {
 		padding: 5em 0 5em 0 ;
-		background-color: #000000;
+		background-color: #ffffff;
 		color: rgba(0, 0, 0, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
 		background-image: url("assets/css/images/sia_header_background_circuit_grid_bright.svg"), linear-gradient(45deg, #101010 5%, #000000 30%, #202020);
