--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3536,8 +3536,9 @@ input, select, textarea {
 }
 
 .mockup-column img {
-  width: 100%;
-  height: auto;
+  height: 500px; /* or match mobile's real height */
+  width: auto;
+  object-fit: cover;
   border-radius: 12px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.6);
 }
