--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3501,6 +3501,7 @@ input, select, textarea {
 .siaconnect-access-section h1,
 .siaconnect-access-section h2 {
   text-align: left;
+	color: #ffffff;
 }
 
 /* SVG animation overlay */
