--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,11 @@
-@import url("assets/css/fontawesome-all.min.css");
+@import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 
+/*
+	Photon by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+*/
 
 
 html, body, div, span, applet, object,
