--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3067,6 +3067,7 @@ input, select, textarea {
 
 	#header {
 		padding: 5em 0 5em 0 ;
+		background: linear-gradient(145deg, #0a0a0a 0%, #111987 100%);
 		background-color: #0a0a0a;
 		color: #ffffff;
 		overflow: hidden;
