--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3252,7 +3252,16 @@ input, select, textarea {
 	body.is-preload #header:after {
 		opacity: 1;
 	}
-
+.circuit-grid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  pointer-events: none;
+  opacity: 0.25;
+}
 /* Nav */
 
 	#nav {
