--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2888,7 +2888,7 @@ input, select, textarea {
 			}
 /* Main Style 2 */
 		.main.style2 {
-			background-color: #000000;
+			background-color: #0a0a0a;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
 			background-image: url("images/overlay1b.png"), url("../../images/header.jpg");
