--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3065,9 +3065,9 @@ input, select, textarea {
 			/* Button Standardization */
 .button {
   display: inline-block;
-  padding: 12px 30px;
+  padding: 30px 30px;
   background-color: #111987;
-  color: #ffffff;
+  color: #0050b6;
   font-size: 1rem;
   border-radius: 6px;
   text-decoration: none;
@@ -3082,7 +3082,7 @@ input, select, textarea {
 /* Special Button Variant (e.g., in Hero) */
 .button.special {
   background-color: #3B9EFF;
-  color: #ffffff;
+  color: #0050b6;
 }
 
 .button.special:hover {
@@ -3094,7 +3094,7 @@ input, select, textarea {
   bottom: 30px;
   right: 30px;
   background-color: #3B9EFF;
-  color: white;
+  color: 0050b6;
   font-size: 24px;
   padding: 10px 14px;
   border-radius: 50%;
