--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3065,18 +3065,28 @@ input, select, textarea {
 			/* Button Standardization */
 .button {
   display: inline-block;
-  padding: 12px 30px;
-  background-color: #0a0a0a;
-  color: #0050b6;
-  font-size: 1rem;
-  border-radius: 6px;
+  background-color: transparent;
+  color: #0050b6 !important;
+		cursor: pointer;
+  font-size: 0.9em;
+		font-weight: 400;
+  border-radius: 4px;
+		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.3s ease;
+		letter-spacing: 0.125em;
+		line-height: 2.75em;
+		padding: 0 2em;
+		text-align: center;
+		text-decoration: none;
+		text-indent: 0.125em;
+		text-transform: uppercase;
+		white-space: nowrap;
 }
 
 .button:hover {
-  background-color: #0050b6;
-		color: #ffffff;
+  background-color: #0050b6 !important;
+		color: #ffffff !important;
   transform: translateY(-2px);
 }
 
@@ -3088,7 +3098,7 @@ input, select, textarea {
 
 .button.special:hover {
   background-color: #0050b6;
-		color: #ffffff;
+		color: #ffffff !important;
 }
 /* Scroll to Top Button */
 .scroll-top-button {
@@ -3121,7 +3131,7 @@ body.scrolled .scroll-top-button {
 /* Hero Section */
 .hero-section {
   position: relative;
-  background: linear-gradient(145deg, #0050b6 0%, #0a0a0a 30%);
+  background: linear-gradient(145deg, #0050b6 0%, #000000 20%);
   color: white;
   text-align: center;
   padding: 160px 20px 100px;
@@ -3153,17 +3163,26 @@ body.scrolled .scroll-top-button {
 }
 
 .hero-section .button.special {
-  background-color: #0a0a0a;
-  color: #0050b6;
-  font-size: 1rem;
-  padding: 15px 30px;
-  border-radius: 6px;
+  background-color: transparent;
+  color: #0050b6 !important;
+  font-size: 0.9em;
+		font-weight: 400;
+  border-radius: 4px;
+		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
+  padding: 0 2em;
+		text-align: center;
+		text-decoration: none;
+		text-indent: 0.125em;
+		text-transform: uppercase;
+		white-space: nowrap;
+  border-radius: 4px;
   transition: background-color 0.3s ease;
 }
 
 .hero-section .button.special:hover {
-  background-color: #63b5ff;
+  background-color: #0050b6 !important;
+		color: #ffffff !important;
 }
 
 /* Hero Animations */
@@ -3180,9 +3199,10 @@ body.scrolled .scroll-top-button {
     font-size: 1.2rem;
   }
   .button {
-    padding: 10px 24px;
-    font-size: 0.9rem;
+    padding: 0 2em;
+    font-size: 0.9em;
   }
+		
 }
 #deployment {
   background: #0a0a0a;
