--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3096,23 +3096,27 @@ input, select, textarea {
 		text-indent: 0.125em;
 		text-transform: uppercase;
 		white-space: nowrap;
+		border: 2px solid #0050b6 !important;
 }
 
 .button:hover {
   background-color: #0050b6 !important;
 		color: #ffffff !important;
+		border: 2px solid #ffffff !important;
   transform: translateY(-2px);
 }
 
 /* Special Button Variant (e.g., in Hero) */
 .button.special {
-  background-color: #0a0a0a;
+  background-color: transparent !important;
   color: #0050b6;
+		border: 2px solid #0050b6 !important;
 }
 
 .button.special:hover {
   background-color: #0050b6;
 		color: #ffffff !important;
+		border: 2px solid #ffffff !important;
 }
 /* Scroll to Top Button */
 .scroll-top-button {
