--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3090,19 +3090,19 @@ input, select, textarea {
   transition: background-color 0.3s ease, transform 0.3s ease;
 		letter-spacing: 0.125em;
 		line-height: 2.75em;
-		padding: 0 2em;
+		padding: 8px 24px;
 		text-align: center;
 		text-decoration: none;
 		text-indent: 0.125em;
 		text-transform: uppercase;
 		white-space: nowrap;
-		border: 2px solid #0050b6 !important;
+		border: 1px solid #0050b6 !important;
 }
 
 .button:hover {
   background-color: #0050b6 !important;
 		color: #ffffff !important;
-		border: 2px solid #ffffff !important;
+		border: 1px solid #ffffff !important;
   transform: translateY(-2px);
 }
 
@@ -3110,13 +3110,13 @@ input, select, textarea {
 .button.special {
   background-color: transparent !important;
   color: #0050b6;
-		border: 2px solid #0050b6 !important;
+		border: 1px solid #0050b6 !important;
 }
 
 .button.special:hover {
   background-color: #0050b6;
 		color: #ffffff !important;
-		border: 2px solid #ffffff !important;
+		border: 1px solid #ffffff !important;
 }
 
 /* Scroll to Top Button */
