--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2770,7 +2770,7 @@ input, select, textarea {
 		height: 2.75em;
 		letter-spacing: 0.125em;
 		line-height: 2.75em;
-		padding: 0 2em;
+		padding: 10px 24px;
 		text-align: center;
 		text-decoration: none;
 		text-indent: 0.125em;
@@ -3090,9 +3090,8 @@ input, select, textarea {
   transition: background-color 0.3s ease, transform 0.3s ease;
 		letter-spacing: 0.125em;
 		line-height: 2.75em;
-		padding: 8px 24px;
+		padding: 12px 24px;
 		text-align: center;
-		text-decoration: none;
 		text-indent: 0.125em;
 		text-transform: uppercase;
 		white-space: nowrap;
@@ -3100,17 +3099,48 @@ input, select, textarea {
 }
 
 .button:hover {
-  background-color: #0050b6 !important;
-		color: #ffffff !important;
-		border: 1px solid #ffffff !important;
-  transform: translateY(-2px);
+  display: inline-block;
+  background-color: transparent;
+  color: #0050b6 !important;
+		cursor: pointer;
+  font-size: 0.9em;
+		font-weight: 400;
+  border-radius: 4px;
+		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
+  text-decoration: none;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+		letter-spacing: 0.125em;
+		line-height: 2.75em;
+		padding: 12px 24px;
+		text-align: center;
+		text-indent: 0.125em;
+		text-transform: uppercase;
+		white-space: nowrap;
+		border: 1px solid #0050b6 !important;
+}
 }
 
 /* Special Button Variant (e.g., in Hero) */
 .button.special {
-  background-color: transparent !important;
-  color: #0050b6;
+  display: inline-block;
+  background-color: transparent;
+  color: #0050b6 !important;
+		cursor: pointer;
+  font-size: 0.9em;
+		font-weight: 400;
+  border-radius: 4px;
+		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
+  text-decoration: none;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+		letter-spacing: 0.125em;
+		line-height: 2.75em;
+		padding: 12px 24px;
+		text-align: center;
+		text-indent: 0.125em;
+		text-transform: uppercase;
+		white-space: nowrap;
 		border: 1px solid #0050b6 !important;
+}
 }
 
 .button.special:hover {
