--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3091,11 +3091,8 @@ input, select, textarea {
 		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.3s ease;
-		letter-spacing: 0.125em;
-		line-height: 2.75em;
 		padding: 12px 24px !important;
 		text-align: center;
-		text-indent: 0.125em;
 		text-transform: uppercase;
 		white-space: nowrap;
 		border: 1px solid #0050b6 !important;
@@ -3104,7 +3101,7 @@ input, select, textarea {
 .button:hover {
   display: inline-block;
   background-color: transparent;
-  color: #0050b6 !important;
+  color: #ffffff !important;
 		cursor: pointer;
   font-size: 0.9em;
 		font-weight: 400;
@@ -3112,14 +3109,11 @@ input, select, textarea {
 		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.3s ease;
-		letter-spacing: 0.125em;
-		line-height: 2.75em;
 		padding: 12px 24px;
 		text-align: center;
-		text-indent: 0.125em;
 		text-transform: uppercase;
 		white-space: nowrap;
-		border: 1px solid #0050b6 !important;
+		border: 1px solid #ffffff !important;
 }
 }
 
@@ -3135,15 +3129,11 @@ input, select, textarea {
 		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.3s ease;
-		letter-spacing: 0.125em;
-		line-height: 2.75em;
-		padding: 12px 24px;
+		padding: 12px 24px !important;
 		text-align: center;
-		text-indent: 0.125em;
 		text-transform: uppercase;
 		white-space: nowrap;
 		border: 1px solid #0050b6 !important;
-}
 }
 
 .button.special:hover {
@@ -3183,7 +3173,7 @@ body.scrolled .scroll-top-button {
 /* Hero Section */
 .hero-section {
   position: relative;
-  background: linear-gradient(145deg, #0050b6 0%, #000000 20%);
+  background: linear-gradient(145deg, #0050b6 0%, #000000 70%);
   color: white;
   text-align: center;
   padding: 160px 20px 100px;
