--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2882,7 +2882,7 @@ input, select, textarea {
 /* Main Style 1 */
 		.main.style1 {
 			position: relative;
-  background: linear-gradient(145deg, #ffffff 0%, #0050b6 20%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, #0050b6 30%);
 			color: #ffffff;
 		}
 		
