--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3172,7 +3172,7 @@ body.scrolled .scroll-top-button {
 /* Hero Section */
 .hero-section {
   position: relative;
-  background: linear-gradient(145deg, #0050b6 0%, #000000 70%);
+  background: linear-gradient(145deg, #000000 70%, #0050b6 0%);
   color: white;
   text-align: center;
   padding: 160px 20px 100px;
@@ -3206,26 +3206,21 @@ body.scrolled .scroll-top-button {
 .hero-section .button.special {
   background-color: transparent;
   color: #0050b6 !important;
-		border: 2px solid #0050b6 !important;
+		border: 1px solid #0050b6 !important;
   font-size: 0.9em;
-		font-weight: 400;
+		font-weight: 300;
   border-radius: 4px;
-		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
-  text-decoration: none;
-  padding: 0 2em;
+  padding: 10px 20px;
 		text-align: center;
-		text-decoration: none;
-		text-indent: 0.125em;
 		text-transform: uppercase;
 		white-space: nowrap;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
+  
 }
 
 .hero-section .button.special:hover {
   background-color: #0050b6 !important;
 		color: #ffffff !important;
-		border: 2px solid #ffffff !important;
+		border: 1px solid #ffffff !important;
 }
 
 /* Hero Animations */
@@ -3242,7 +3237,7 @@ body.scrolled .scroll-top-button {
     font-size: 1.2rem;
   }
   .button {
-    padding: 0 2em;
+    padding: 10px 20px;
     font-size: 0.9em;
   }
 		
