--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3170,10 +3170,10 @@ body.scrolled .scroll-top-button {
 /* Hero Section */
 .hero-section {
   position: relative;
-  background: linear-gradient(145deg, #000000 70%, #0050b6 0%);
+  background: linear-gradient(145deg, #0050b6 0%, #000000 80%);
   color: white;
   text-align: center;
-  padding: 160px 20px 100px;
+  padding: 60px 20px 100px;
   overflow: hidden;
 }
 
