--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3525,13 +3525,12 @@ body.scrolled .scroll-top-button {
 		color: #ffffff;
 		position: relative;
 		width: auto;
-		padding: .2em;
+		padding: .1em;
 		background-color: #0050b6;
 		border-top-left-radius: 0em;
 		border-top-right-radius: 0em;
 		cursor: default;
 		text-align: center;
-		text-decoration: none;
 	}
 
 		#nav input, #nav select, #nav textarea {
@@ -3574,29 +3573,30 @@ body.scrolled .scroll-top-button {
 		}
 
 			#nav ul li {
-				-moz-transition: margin 0.4s ease;
-				-webkit-transition: margin 0.4s ease;
-				-ms-transition: margin 0.4s ease;
-				transition: margin 0.4s ease;
+				-moz-transition: margin 0.2s ease;
+				-webkit-transition: margin 0.2s ease;
+				-ms-transition: margin 0.2s ease;
+				transition: margin 0.2s ease;
 				display: inline-block;
-				margin: 0 1.25em;
-				padding: 4.5;
-				vertical-align: stretch;
+				margin: 0 0.15em;
+				padding: 0;
+				vertical-align: middle;
 			}
 
 				#nav ul li a {
-					box-shadow: inset 0 0 0 0 #ffffff;
-					color: #ffffff;
+					line-height: 1.5;
+					box-shadow: inset 0 0 0 0 #0050b6;
 					padding: 0 .25rem;
 					margin: 0 -.25rem;
-					transition: color .6s ease-in-out, box-shadow .5s ease-in-out;
-					text-decoration: none;
-					border-bottom: 0;
+					border: 0;
+					border-radius: 2px;
+					color: #ffffff;
+					transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 				}
 
 					#nav ul li a:hover {
-						color: #0050b6;
-						box-shadow: inset 200px 0 0 0 #ffffff;
+						color: #ffffff;
+						box-shadow: inset 200px 0 0 0 #ffffff;;
 					}
 
 					#nav ul li a.active {
