--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2765,10 +2765,7 @@ input, select, textarea {
 		display: inline-block;
 		font-size: 0.9em;
 		font-weight: 400;
-		height: 2.75em;
-		letter-spacing: 0.125em;
-		line-height: 2.75em;
-		padding: 10px 24px;
+		padding: 20px;
 		text-align: center;
 		text-decoration: none;
 		text-indent: 0.125em;
@@ -3086,7 +3083,7 @@ input, select, textarea {
 		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.3s ease;
-		padding: 12px 24px !important;
+		padding: 20px !important;
 		text-align: center;
 		text-transform: uppercase;
 		white-space: nowrap;
@@ -3124,7 +3121,7 @@ input, select, textarea {
 		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.3s ease;
-		padding: 12px 24px !important;
+		padding: 20px !important;
 		text-align: center;
 		text-transform: uppercase;
 		white-space: nowrap;
@@ -3134,6 +3131,8 @@ input, select, textarea {
 .button.special:hover {
   background-color: #0050b6;
 		color: #ffffff !important;
+		padding: 20px !important;
+		text-align: center;
 		border: 1px solid #ffffff !important;
 }
 
@@ -3206,7 +3205,7 @@ body.scrolled .scroll-top-button {
   font-size: 0.9em;
 		font-weight: 300;
   border-radius: 4px;
-  padding: 10px 20px;
+  padding: 20px;
 		text-align: center;
 		text-transform: uppercase;
 		white-space: nowrap;
@@ -3862,10 +3861,11 @@ body.scrolled .scroll-top-button {
 }
 
 .future-section .button.special {
-  background-color: #111987;
-  border: none;
-  padding: 12px 30px;
+  background-color: transparent;
+  border: 1px;
   font-size: 1em;
+		padding: 20px !important;
+		text-align: center;
   color: #ffffff;
   text-decoration: none;
   border-radius: 6px;
