--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3076,37 +3076,29 @@ input, select, textarea {
   display: inline-block;
   background-color: transparent;
   color: #0050b6 !important;
+		border: 1px solid #0050b6 !important;
 		cursor: pointer;
   font-size: 0.9em;
-		font-weight: 400;
+		font-weight: 300;
   border-radius: 4px;
-		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
-  transition: background-color 0.3s ease, transform 0.3s ease;
 		padding: 20px !important;
 		text-align: center;
-		text-transform: uppercase;
 		white-space: nowrap;
-		border: 1px solid #0050b6 !important;
 }
 
 .button:hover {
   display: inline-block;
   background-color: transparent;
   color: #ffffff !important;
+		border: 1px solid #ffffff !important;
 		cursor: pointer;
   font-size: 0.9em;
-		font-weight: 400;
+		font-weight: 300;
   border-radius: 4px;
-		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-		padding: 12px 24px;
+		padding: 20px;
 		text-align: center;
-		text-transform: uppercase;
-		white-space: nowrap;
-		border: 1px solid #ffffff !important;
-}
 }
 
 /* Special Button Variant (e.g., in Hero) */
@@ -3114,26 +3106,28 @@ input, select, textarea {
   display: inline-block;
   background-color: transparent;
   color: #0050b6 !important;
+		border: 1px solid #0050b6 !important;
 		cursor: pointer;
   font-size: 0.9em;
-		font-weight: 400;
+		font-weight: 300;
   border-radius: 4px;
-		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
   text-decoration: none;
-  transition: background-color 0.3s ease, transform 0.3s ease;
 		padding: 20px !important;
 		text-align: center;
-		text-transform: uppercase;
-		white-space: nowrap;
-		border: 1px solid #0050b6 !important;
+		
 }
 
 .button.special:hover {
-  background-color: #0050b6;
+  background-color: transparent;
 		color: #ffffff !important;
 		padding: 20px !important;
-		text-align: center;
 		border: 1px solid #ffffff !important;
+		cursor: pointer;
+  font-size: 0.9em;
+		font-weight: 300;
+  border-radius: 4px;
+  text-decoration: none;
+		text-align: center;
 }
 
 /* Scroll to Top Button */
@@ -3207,9 +3201,6 @@ body.scrolled .scroll-top-button {
   border-radius: 4px;
   padding: 20px;
 		text-align: center;
-		text-transform: uppercase;
-		white-space: nowrap;
-  
 }
 
 .hero-section .button.special:hover {
