--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2761,16 +2761,11 @@ input, select, textarea {
 		border: 0;
 		box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
 		color: #555 !important;
-		cursor: pointer;
 		display: inline-block;
 		font-size: 0.9em;
-		font-weight: 400;
 		padding: 20px;
 		text-align: center;
 		text-decoration: none;
-		text-indent: 0.125em;
-		text-transform: uppercase;
-		white-space: nowrap;
 	}
 
 		input[type="submit"]:hover,
@@ -3077,28 +3072,16 @@ input, select, textarea {
   background-color: transparent;
   color: #0050b6 !important;
 		border: 1px solid #0050b6 !important;
-		cursor: pointer;
   font-size: 0.9em;
 		font-weight: 300;
-  border-radius: 4px;
   text-decoration: none;
-		padding: 20px !important;
+		padding: 2em;
 		text-align: center;
-		white-space: nowrap;
 }
 
 .button:hover {
-  display: inline-block;
-  background-color: transparent;
-  color: #ffffff !important;
-		border: 1px solid #ffffff !important;
-		cursor: pointer;
-  font-size: 0.9em;
-		font-weight: 300;
-  border-radius: 4px;
-  text-decoration: none;
-		padding: 20px;
-		text-align: center;
+  color: #ffffff;
+	
 }
 
 /* Divider line between platforms */
@@ -3115,27 +3098,17 @@ input, select, textarea {
   background-color: transparent;
   color: #0050b6 !important;
 		border: 1px solid #0050b6 !important;
-		cursor: pointer;
   font-size: 0.9em;
-		font-weight: 300;
   border-radius: 4px;
   text-decoration: none;
-		padding: 20px !important;
+		padding: 2em;
 		text-align: center;
 		
 }
 
 .button.special:hover {
   background-color: transparent;
-		color: #ffffff !important;
-		padding: 20px !important;
-		border: 1px solid #ffffff !important;
-		cursor: pointer;
-  font-size: 0.9em;
-		font-weight: 300;
-  border-radius: 4px;
-  text-decoration: none;
-		text-align: center;
+		color: #ffffff;
 }
 
 /* Scroll to Top Button */
@@ -3177,7 +3150,7 @@ body.scrolled .scroll-top-button {
 }
 
 .hero-container {
-  max-width: 800px;
+  max-width: 100%;
   margin: 0 auto;
   animation: fadeInHero 1.8s ease;
 }
@@ -4060,8 +4033,13 @@ body.scrolled .scroll-top-button {
 			input[type="button"],
 			button,
 			.button {
-				height: 3em;
-				line-height: 3em;
+				background-color: #3B9EFF;
+  color: white;
+  font-size: 1rem;
+  padding: 12px 30px;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
 			}
 
 		/* Main */
