--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3164,7 +3164,7 @@ html {
 
 .bg-hero {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  background-image: linear-gradient(-60deg, #0a0a0a 50%, #0050b6 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
