--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3144,6 +3144,23 @@ body.scrolled .scroll-top-button {
 /* Hero Section */
 .hero-section {
   position: relative;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
   color: white;
   text-align: center;
   padding: 160px 20px 100px;
@@ -3185,7 +3202,7 @@ body.scrolled .scroll-top-button {
 }
 
 .hero-section .button.special:hover {
-  background-color: #0050b6;
+  background-color: #0050b6 !important;
 	border: 2px solid #0050b6 !important;
 }
 
