--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3146,10 +3146,11 @@ body.scrolled .scroll-top-button {
 /* Hero Section */
 .hero-section {
   position: relative;
-	 padding: 100px 20px;
   text-align: center;
   overflow: hidden;
-	background: linear-gradient(-45deg, #000000, #0a0a0a, #0050b6, #23d5ab);
+	color: white;
+  padding: 160px 20px 100px;
+	background: linear-gradient(-45deg, #000000, #0a0a0a, #0050b6, 0a0a0a);
 	animation: gradient 15s ease infinite;
 }
 
@@ -3163,11 +3164,7 @@ body.scrolled .scroll-top-button {
 	100% {
 		background-position: 0% 50%;
 	}
-}
-  color: white;
-  text-align: center;
-  padding: 160px 20px 100px;
-  overflow: hidden;
+
 }
 
 .hero-container {
