--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3152,6 +3152,7 @@ body.scrolled .scroll-top-button {
   padding: 160px 20px 100px;
 	background: linear-gradient(-45deg, #000000, #0a0a0a, #0050b6, #0a0a0a);
 	animation: gradient 7s ease infinite;
+	height: 20vh;
 }
 
 @keyframes gradient {
