--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3150,9 +3150,11 @@ body.scrolled .scroll-top-button {
   overflow: hidden;
 	color: white;
   padding: 160px 20px 100px;
+}
+
+.hero-bg {
 	background: linear-gradient(-45deg, #000000, #0a0a0a, #0050b6, #0a0a0a);
 	animation: gradient 7s ease infinite;
-}
 
 @keyframes gradient {
 	0% {
