--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3828,13 +3828,18 @@ body.scrolled .scroll-top-button {
 .future-section h2 {
   font-size: 2.5em;
   color: #ffffff;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+}
+.future-section h3 {
+  font-size: 2em;
+  color: #ffffff;
+  margin-bottom: 40px;
 }
 
 .future-section p {
   font-size: 1.2em;
   color: #cccccc;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 
 .future-section .button.special {
