--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3498,12 +3498,11 @@ body.scrolled .scroll-top-button {
 		-webkit-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		-ms-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-		background-color: #0050b6;
 		color: #ffffff;
 		position: relative;
 		width: auto;
 		padding: .2em;
-		background-color: #0050b6;
+		background-color: #111987;
 		border-top-left-radius: 0em;
 		border-top-right-radius: 0em;
 		cursor: default;
@@ -3564,6 +3563,7 @@ body.scrolled .scroll-top-button {
 				#nav ul li a {
 					box-shadow: inset 0 0 0 0 #ffffff;
 					color: #ffffff;
+					font weight: 350;
 					padding: 0 .25rem;
 					margin: 0 -.25rem;
 					transition: color .6s ease-in-out, box-shadow .5s ease-in-out;
