--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3745,18 +3745,34 @@ body.scrolled .scroll-top-button {
 
 /* siaconnect-access-section */
 .siaconnect-access-section {
+  background: #000000;
+  padding: 100px 20px;
+  text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: #0a0a0a;
-  color: #ffffff;
-  text-align: center;
-  padding: 80px 0;
 }
 
-.siaconnect-access-section h1,
+.siaconnect-access-section h1 {
+  font-size: 3em;
+  color: #ffffff;
+  margin-bottom: 2px;
+}
+
 .siaconnect-access-section h2 {
-  text-align: left;
-	color: #ffffff;
+  font-size: 2.5em;
+  color: #ffffff;
+  margin-bottom: 30px;
+}
+.siaconnect-access-section h3 {
+  font-size: 2em;
+  color: #ffffff;
+  margin-bottom: 30px;
+}
+
+.siaconnect-access-section p {
+  font-size: 1.2em;
+  color: #cccccc;
+  margin-bottom: 80px;
 }
 
 /* SVG animation overlay */
@@ -3771,6 +3787,9 @@ body.scrolled .scroll-top-button {
 
 /* Content container above SVG */
 .siaconnect-access-section .container {
+max-width: 800px;
+  margin: 0 auto;
+  animation: fadeInFuture 1.8s ease;
   position: relative;
   z-index: 1;
 }
@@ -3876,7 +3895,7 @@ body.scrolled .scroll-top-button {
 
 /* SIAConnect Demo Video Section */
 .demo-section {
-  background: #0a0a0a0;
+  background: #111987;
   padding: 100px 20px;
   text-align: center;
   position: relative;
@@ -3887,6 +3906,11 @@ body.scrolled .scroll-top-button {
   max-width: 800px;
   margin: 0 auto;
   animation: fadeInFuture 1.8s ease;
+}
+.demo-section h1 {
+  font-size: 3em;
+  color: #ffffff;
+  margin-bottom: 20px;
 }
 
 .demo-section h2 {
