--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4020,7 +4020,7 @@ max-width: 100%;
     color: #ccc;
   }
   .comparison-table th {
-    background-color: #0050b6;
+    background-color: #111987;
     color: white;
     font-weight: bold;
     text-align: center;
